--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: flutter_demo
-
 environment:
   sdk: '>=3.0.0 <4.0.0'
 dev_dependencies:
   melos: ^6.0.0
+  pubspec_dependency_sorter: ^1.0.4
+  very_good_analysis: ^5.1.0
